added logic for news retrieve; added userIdentity middleware; added custom error response; added swagger description
