# internal/controller/httpv1/editors.go
@@ -3,6 +3,7 @@ package httpv1
 import (
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"sas/internal/models"
 	"sas/internal/service"
 	"sas/pkg/logger"
 )
@@ -10,11 +11,18 @@ import (
 // initEditorsRoutes - Инициализация группы роутера для редакторов сайта университета
 func (h *Handler) initEditorsRoutes(api *gin.RouterGroup) {
 	// Группирует все маршруты редакторов
-	editors := api.Group("/editors", h.setUniversityFromRequest())
+	editors := api.Group("/editors", h.setUniversityFromRequest)
 	{
-		editors.POST("/sign-up", h.editorsSignUp)    // Регистрация нового редактора сайта
-		editors.POST("/sign-in", h.editorSignIn)     // Вход редактора на сайт
+		editors.POST("/sign-up", h.editorsSignUp) // Регистрация нового редактора сайта
+		editors.POST("/sign-in", h.editorSignIn)  // Вход редактора на сайт
+		editors.POST("/auth/refresh", h.editorRefresh)
 		editors.GET("/verify/:hash", h.editorVerify) // Подтверждение учетной записи редактора ПОКА ИЗМЕНЕНО НА GET (POST изначально)
+
+		authenticated := editors.Group("/", h.userIdentity)
+		{
+			authenticated.GET("/news", h.editorGetAllNews)
+			authenticated.GET("/news/:id", h.editorsGetNewsById)
+		}
 	}
 }
 
@@ -25,17 +33,29 @@ type editorsSignUpInput struct {
 	Password string `json:"hash" binding:"required"`
 }
 
+// @Summary Editor SignUp
+// @Tags editors
+// @Description create editor account
+// @ID editorSignUp
+// @Accept json
+// @Produce json
+// @Param input body editorsSignUpInput true "sign up info"
+// @Success 201 {string} string "ok"
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /editors/sign-up [post]
 // editorsSignUp - Парсит тело полученного запроса в структуру и получает домен университета, от которого пришел запрос
 func (h *Handler) editorsSignUp(ctx *gin.Context) {
 	var input editorsSignUpInput
 	if err := ctx.BindJSON(&input); err != nil {
-		ctx.AbortWithStatus(http.StatusBadRequest)
+		newErrorResponse(ctx, http.StatusBadRequest, "invalid input body")
 		return
 	}
 
 	univ, err := getUniversityFromContext(ctx)
 	if err != nil {
-		ctx.AbortWithStatus(http.StatusInternalServerError)
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
 	}
 
@@ -47,7 +67,7 @@ func (h *Handler) editorsSignUp(ctx *gin.Context) {
 	}); err != nil {
 		logger.Error(err)
 
-		ctx.AbortWithStatus(http.StatusInternalServerError)
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
 	}
 
@@ -64,16 +84,28 @@ type tokenResponse struct {
 	RefreshToken string `json:"refresh_token"`
 }
 
+// @Summary Editor SignIn
+// @Tags editors
+// @Description editor sign in
+// @ID editorSignIn
+// @Accept json
+// @Produce json
+// @Param input body editorsSignInInput true "sign in info"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /editors/sign-in [post]
 func (h *Handler) editorSignIn(ctx *gin.Context) {
 	var inp editorsSignInInput
 	if err := ctx.BindJSON(&inp); err != nil {
-		ctx.AbortWithStatus(http.StatusBadRequest)
+		newErrorResponse(ctx, http.StatusBadRequest, "invalid input body")
 		return
 	}
 
 	univ, err := getUniversityFromContext(ctx)
 	if err != nil {
-		ctx.AbortWithStatus(http.StatusInternalServerError)
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
 	}
 
@@ -84,6 +116,8 @@ func (h *Handler) editorSignIn(ctx *gin.Context) {
 	})
 	if err != nil {
 		logger.Error(err)
+
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 	}
 
 	ctx.JSON(http.StatusOK, tokenResponse{
@@ -96,16 +130,29 @@ type refreshInput struct {
 	Token string `json:"token" binding:"required"`
 }
 
+// @Summary Editor Refresh Token
+// @Security EditorsAuth
+// @Tags editors
+// @Description editor refresh tokens
+// @ID editorRefresh
+// @Accept json
+// @Produce json
+// @Param input body refreshInput true "sign up info"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /editors/refresh [post]
 func (h *Handler) editorRefresh(ctx *gin.Context) {
 	var inp refreshInput
 	if err := ctx.BindJSON(&inp); err != nil {
-		ctx.AbortWithStatus(http.StatusBadRequest)
+		newErrorResponse(ctx, http.StatusBadRequest, "invalid input body")
 		return
 	}
 
 	univ, err := getUniversityFromContext(ctx)
 	if err != nil {
-		ctx.AbortWithStatus(http.StatusInternalServerError)
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
 	}
 
@@ -113,7 +160,7 @@ func (h *Handler) editorRefresh(ctx *gin.Context) {
 	if err != nil {
 		logger.Error(err)
 
-		ctx.AbortWithStatus(http.StatusInternalServerError)
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
 	}
 
@@ -123,18 +170,95 @@ func (h *Handler) editorRefresh(ctx *gin.Context) {
 	})
 }
 
+// @Summary Editor Verify Registration
+// @Tags editors
+// @Description editor verify registration
+// @ID editorVerify
+// @Accept json
+// @Produce json
+// @Param code path string true "verification code"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /editors/verify/{code} [post]
 // editorVerify - Подтверждение создания учетной записи редактора
 func (h *Handler) editorVerify(ctx *gin.Context) {
 	hash := ctx.Param("hash")
 	if hash == "" {
-		ctx.AbortWithStatus(http.StatusBadRequest)
+		newErrorResponse(ctx, http.StatusBadRequest, "code is empty")
 		return
 	}
 
 	if err := h.editorsService.Verify(ctx.Request.Context(), hash); err != nil {
 		logger.Error(err)
-		ctx.AbortWithStatus(http.StatusBadRequest)
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
+		return
 	}
 
 	ctx.Status(http.StatusOK)
+}
+
+// @Summary Editor Get All News
+// @Tags editors
+// @Security EditorsAuth
+// @Description editor get all news
+// @ID editorGetAllNews
+// @Accept json
+// @Produce json
+// @Success 200 {array} university.News
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /editors/news [get]
+func (h *Handler) editorGetAllNews(ctx *gin.Context) {
+	univ, err := getUniversityFromContext(ctx)
+	if err != nil {
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	news := make([]models.News, 0)
+	for _, n := range univ.News {
+		if n.Published {
+			news = append(news, n)
+		}
+	}
+
+	ctx.JSON(http.StatusOK, news)
+}
+
+// @Summary Editor Get News By ID
+// @Tags editors
+// @Security EditorsAuth
+// @Description editor get news by id
+// @ID editorsGetNewsById
+// @Accept json
+// @Produce json
+// @Param id path string true "news id"
+// @Success 200 {object} university.News
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /editors/news/{id} [get]
+func (h *Handler) editorsGetNewsById(ctx *gin.Context) {
+	id := ctx.Param("id")
+	if id == "" {
+		newErrorResponse(ctx, http.StatusBadRequest, "invalid id param")
+		return
+	}
+
+	univ, err := getUniversityFromContext(ctx)
+	if err != nil {
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	for _, n := range univ.News {
+		if n.Published && n.ID.Hex() == id {
+			ctx.JSON(http.StatusOK, n)
+		}
+	}
+
+	newErrorResponse(ctx, http.StatusBadRequest, "not found")
 }
